# Sensor-Fusion-Odometry-Analysis-Stack

robotics-navigation-stack/: README.md
robotics-navigation-stack/docs/: udev_rule_for_motorcontrollers.md
robotics-navigation-stack/src/nandi_controller/: CMakeLists.txt  package.xml
robotics-navigation-stack/src/nandi_controller/config/: diff_drive_controller_params.yaml
robotics-navigation-stack/src/nandi_controller/include/nandi_controller/: nandi_hardware.hpp
robotics-navigation-stack/src/nandi_controller/launch/: bringup.launch.py
robotics-navigation-stack/src/nandi_controller/resource/: nandi_controller_plugins.xml
robotics-navigation-stack/src/nandi_controller/src/: nandi_hardware.cpp
robotics-navigation-stack/src/nandi_controller/urdf/: nandi.urdf.xacro
robotics-navigation-stack/src/phidgets_drivers/phidgets_spatial/: CMakeLists.txt
robotics-navigation-stack/src/phidgets_drivers/phidgets_spatial/launch/: spatial-launch.py
robotics-navigation-stack/src/phidgets_drivers/phidgets_spatial/src/: spatial_ros_i.cpp
robotics-navigation-stack/src/pose_logger_pkg/: package.xml  setup.cfg  setup.py
robotics-navigation-stack/src/pose_logger_pkg/config/: pose_logger_params.yaml
robotics-navigation-stack/src/pose_logger_pkg/launch/: pose_logger.launch.py
robotics-navigation-stack/src/pose_logger_pkg/path/: filtered_odom_20260115-143255.csv  wheel_odom_20260115-143255.csv
robotics-navigation-stack/src/pose_logger_pkg/path/path_1/: filtered_odom_20260115-140133.csv  wheel_odom_20260115-140133.csv
robotics-navigation-stack/src/pose_logger_pkg/path/path_2/: filtered_odom_20260115-140901.csv  wheel_odom_20260115-140901.csv
robotics-navigation-stack/src/pose_logger_pkg/path/path_3/: filtered_odom_20260115-141541.csv  wheel_odom_20260115-141541.csv
robotics-navigation-stack/src/pose_logger_pkg/path/path_4/: filtered_odom_20260115-142126.csv  wheel_odom_20260115-142126.csv
robotics-navigation-stack/src/pose_logger_pkg/pose_logger_pkg/: pose_logger_node.py
robotics-navigation-stack/src/robot_localization/: CMakeLists.txt  package.xml
robotics-navigation-stack/src/robot_localization/include/robot_localization/: ros_filter_types.hpp
robotics-navigation-stack/src/robot_localization/launch/: ekf.launch.py
robotics-navigation-stack/src/robot_localization/params/: ekf.yaml
robotics-navigation-stack/src/robot_localization/src/: ros_filter.cpp
robotics-navigation-stack/src/solo_motor_controller/: package.xml  requirements.txt  setup.cfg  setup.py
robotics-navigation-stack/src/solo_motor_controller/launch/: solo_motors.launch.py
robotics-navigation-stack/src/solo_motor_controller/solo_motor_controller/: motor_controller_node.py
