<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nandi_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="devkunalmod@gamil.com">kunal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>

  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/share/${PROJECT_NAME}/resource/nandi_controller_plugins.xml" />
  </export>
</package>